kube/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: my-package
spec:
  type: ClusterIP
  ports:
    - name: http 
      port: 8080
      targetPort: 8080
