kube/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: my-package
    annotations:
        traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
    ingressClassName: traefik
    rules:
        - host: sample.my.domain
          http:
            paths:
              - path: /
                pathType: ImplementationSpecific
                backend:
                  service:
                    name: my-package
                    port:
                      number: 8080
